fixed: added display: flex so that child elements can stretch to the full height of the parent element using flex-grow: 1

--- a/src/views/Main/Main.module.scss
+++ b/src/views/Main/Main.module.scss
@@ -2,6 +2,8 @@
   position: relative;
   flex-grow: 1;
   padding-bottom: 80px;
+  display: flex;
+  flex-direction: column;
 
   @media (min-width: 580px) {
     padding-bottom: 100px;
